Fix modal being too wide on mobile

--- a/css/amiyaroad.css
+++ b/css/amiyaroad.css
@@ -210,7 +210,6 @@
 	padding: 20px;
 	margin-top: 5%;
 	border: 1px solid #888;
-	width: 100%;
 }
 
 @media (min-width: 750px) {
